# mew

./: Cargo.toml  README.md  build.rs
src/: diagnostics.rs  main.rs
src/config/: settings.rs
src/performance/: mod.rs  monitor.rs
src/ui/: tray.rs
src/utils/: logger.rs  startup.rs
src/wallpaper/: decoder.rs  mod.rs  player.rs  renderer.rs
ui/: main.slint
