[package]
name = "mew"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.5"
ffmpeg-next = "7.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.14"
sysinfo = "0.30"
battery = "0.7"
dirs = "5.0"

[build-dependencies]
slint-build = "1.5"
